# TalosTrajopt

example-robot-data/: CMakeLists.txt  package.xml
example-robot-data/cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  example-robot-data.pc  install_manifest.txt
example-robot-data/cmake/cmake/: cmake_reinstall.cmake  cmake_reinstall.cmake.configured  cmake_uninstall.cmake
example-robot-data/cmake/include/example-robot-data/: config.hh  deprecated.hh  warning.hh
example-robot-data/python/: CMakeLists.txt
tesseract/tesseract_planning/src/: ompl_planner_tests.cpp
tesseract/tesseract_planning/src/trajopt/: trajopt_planner.cpp
tesseract/tesseract_ros/include/tesseract_ros/: ros_basic_plotting.h
tesseract/tesseract_ros/src/kdl/: kdl_env.cpp  kdl_joint_kin.cpp
trajopt/: plotScen  plotScend
trajopt/trajopt/scripts/: glass_up_right_plan.csv
trajopt/trajopt_examples/: CMakeLists.txt  package.xml
trajopt/trajopt_examples/config/: talos.srdf
trajopt/trajopt_examples/launch/: glass_up_right_plan.launch  talos_test.launch
trajopt/trajopt_examples/moveit/: .setup_assistant  package.xml
trajopt/trajopt_examples/moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  new.urdf  ompl_planning.yaml  ros_controllers.yaml  talos.srdf
trajopt/trajopt_examples/moveit/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
trajopt/trajopt_examples/msg/: my_msg.msg
trajopt/trajopt_examples/src/: glass_up_right_plan.cpp  my_publisher.cpp
trajopt/trajopt_examples/urdf/: frames.gv  lbr_iiwa_14_r820_macro.xacro  talos_left_arm.urdf
trajopt/trajopt_sco/: CMakeLists.txt  package.xml
trajopt/trajopt_sco/src/: optimizers.cpp
